# ROS-SETUP

./: .gitmodules  Dockerfile  Makefile  README.md  create_container_linux.bash  create_container_windows.sh
docker_ws/py_pubsub/: CMakeLists.txt  package.xml
docker_ws/py_pubsub/launch/: myworld.launch
docker_ws/py_pubsub/msg/: DistanceFruit.msg
docker_ws/py_pubsub/scripts/: custom_publisher.py  custom_subscriber.py  follow_person.py  human_detector.py  publisher_rviz.py
docker_ws/py_pubsub/urdf/: mapa1.xacro
docker_ws/sdv_code/: package.xml  setup.cfg  setup.py
docker_ws/sdv_code/launch/: sdv_launch.py
docker_ws/sdv_code/sdv_code/: publish_images.py  sdv_main.py
docker_ws/sdv_msg/: CMakeLists.txt  package.xml
docker_ws/sdv_msg/msg/: EtaPose.msg  SystemDynamics.msg  ThrustControl.msg
docker_ws/xbox_controller/: package.xml  setup.py
docker_ws/xbox_controller/launch/: xbox_launch.py
docker_ws/xbox_controller/xbox_controller/: publish_images.py  sdv_main.py  sdv_vision.py  test  throttle_module.py  xbox_driver.py  xbox_node.py
